tests/ui/typeck/types/empty_struct.sol
struct A {} //~ ERROR: structs must have at least one field